--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,6 +30,11 @@
 					</div>
 					<div class = "col-xs-6">
 						<div class = "btn-group pull-right">
+							<%= link_to like_post_path(@post), method: :put, class: "btn btn-default" do %>
+								<span class="glyphicon glyphicon-heart">
+							    	<%= @post.get_upvotes.size %>
+							 	</span>
+							<% end %>
 							<!--  link to edit post -->
 							<%= link_to "Edit", edit_post_path, class: "btn btn-default" %>
 							<!-- link to destroy post and confirmation message-->
