--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
 				<div class = "nav navbar-nav navbar-right">
 					<%= link_to 'Sign Up', users_new_path, class: "btn btn-default" %>
 					<%= link_to 'Sign In', login_path, class: "btn btn-default" %>
+        			<li><a href="/auth/facebook">Login via facebook</a></li>
+        			<li><a href="/auth/logout">Logout</a></li>
 				</div>
 			<% end %>
 		</div>
